build about section

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,6 +12,7 @@ Author: Tom Haycock-West
 @import 'partials/helpers';
 @import 'partials/vars';
 @import 'partials/typography';
+@import 'modules/buttons';
 @import 'modules/global';
 @import 'sections/header';
 @import 'sections/intro';
