--- a/assets/sass/sections/_about.scss
+++ b/assets/sass/sections/_about.scss
@@ -3,7 +3,9 @@
 	text-align: center;
 	font-weight: bold;
 	margin-top: 270px;
+	padding-bottom: 88px;
 	margin-bottom: 300px;
+	position: relative;
 
 	.inner {
 		@include grid-column( 10, $center:true );
@@ -18,6 +20,19 @@
 			margin-bottom: 74px;
 			font-size: 36px;
 			line-height: 36px;
+		}
+
+		.btn-container {
+			margin-top: 100px;
+		}
+
+		&::after {
+			content: '';
+			border-bottom: 1px solid #393737;
+			position: absolute;
+			bottom: 0;
+			left: 13.5rem;
+			right: 13.5rem;
 		}
 	}
 }
