build gallery section
add in isotope
add bg colour to header on scroll

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,3 +17,4 @@ Author: Tom Haycock-West
 @import 'sections/header';
 @import 'sections/intro';
 @import 'sections/about';
+@import 'sections/gallery';
