--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -17,4 +17,5 @@ Author: Tom Haycock-West
 @import 'sections/header';
 @import 'sections/intro';
 @import 'sections/about';
+@import 'sections/trades';
 @import 'sections/gallery';
