--- a/assets/sass/sections/_trades.scss
+++ b/assets/sass/sections/_trades.scss
@@ -1,8 +1,12 @@
 .section--trades {
 	@include grid-row( );
+	margin-top: 25px;
 
 	.inner {
 		@include grid-column( 12 );
+		position: relative;
+		padding-bottom: 88px;
+		margin-bottom: 170px;
 
 		.title {
 			text-align: center;
@@ -10,6 +14,8 @@
 
 		.trades-container {
 			display: block;
+			@include cf();
+
 
 			.trade {
 				@include grid-column( 4, $collapse:true );
@@ -18,6 +24,13 @@
 				@include rem( 'font-size', 36px );
 				font-weight: bold;
 				color: $trade-title;
+				filter: brightness(0.9);
+				transition: 0.25s filter linear;
+				transition: 0.25s -webkit-filter linear;
+
+				&:hover {
+					filter: brightness(1);
+				}
 
 				.trade-title {
 					@include center();
@@ -42,16 +55,56 @@
 		}
 
 		.trade-description-container {
+			@include cf();
+			@include grid-column( 10, $center:true );
 			display: block;
+			color: $body;
+			@include rem( 'font-size', 26px );
+			text-align: center;
+			margin-top: 50px;
 
 			.trade-description {
 				display: none;
+				position: relative;
 
 				&.show {
 					display: block;
 				}
 
+				.list-container {
+					text-align: center;
+
+					ul {
+						@include grid-column( 6 );
+						margin: 0;
+						display: inline-block;
+						text-align: center;
+
+						&.single {
+							@include grid-column( 6, $center:true );
+						}
+
+						li {
+							list-style: none;
+						}
+					}
+				}
+
 			}
+		}
+
+		.btn-container {
+			margin-top: 50px;
+			text-align: center;
+		}
+
+		&::after {
+			content: '';
+			border-bottom: 1px solid #393737;
+			position: absolute;
+			bottom: 0;
+			left: 13.5rem;
+			right: 13.5rem;
 		}
 	}
 
