--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -19,3 +19,4 @@ Author: Tom Haycock-West
 @import 'sections/about';
 @import 'sections/trades';
 @import 'sections/gallery';
+@import 'sections/testimonials';
