--- a/assets/sass/sections/_header.scss
+++ b/assets/sass/sections/_header.scss
@@ -67,51 +67,73 @@
 			}
 		}
 
-		.mobile-nav {
+		.mobile-nav-icon-container {
 			float: right;
 			position: relative;
 			display: block;
 			@include rem(margin-right, 20px);
 			@include rem(margin-top, 25px);
-		}
 
-		.svg-menu-toggle {
-			fill: $body;
-			pointer-events:all; //needs to be there so the hover works
-			cursor:pointer;
+			@include above(small) {
+				display: none;
+			}
 
 			.bar {
-				transform:rotate(0) translateY(0) translateX(0);
-				opacity:1;
-				transform-origin: 20px 10px;
+				transform: rotate(0) translateY(0) translateX(0);
+				opacity: 1;
+				transform-origin: 20px 7px;
 			    transition: transform 0.4s ease-in-out, opacity 0.2s ease-in-out;
 			}
 
-		 //  	.bar:nth-of-type(1) {
-			// 	transform-origin: 20px 10px;
-			// }
-		 //   	.bar:nth-of-type(3) {
-			// 	transform-origin: 20px 10px;
-		 //   }
+			&.open {
+				.nav-icon {
+					.mobile-nav-toggle {
+						.bar {
+						    &:nth-of-type(1) {
+								transform:rotate(-45deg) translateY(0) translateX(0) !important;
+						    }
+						    &:nth-of-type(2) {
+								opacity:0 !important;
+						    }
+						    &:nth-of-type(3) {
+								transform:rotate(45deg) translateY(0em) translateX(0em) !important;
+						    }
+						}
+					}
+				}
+			}
 		}
 
-		.svg-menu-toggle:hover {
-		    .bar:nth-of-type(1) {
-				transform:rotate(-45deg) translateY(0) translateX(0);
-		    }
+		.mobile-nav-container {
+			width: 100%;
+			display: block;
+			background: $bg;
+			position: absolute;
+			left: 0;
+			right: 0;
+			transform: translateY( -200px ); 
+			transition: 0.25s transform linear;
 
-		    .bar:nth-of-type(2) {
-				opacity:0;
-		    }
+			&.open {
+				transform: translateY( 0 ); 
+			}
 
-		    .bar:nth-of-type(3) {
-				transform:rotate(45deg) translateY(0em) translateX(0em);
-		    }
+			.mobile-nav {
+				text-align: center;
+				padding: 0;
+
+				li {
+					list-style: none;
+
+					a {
+						text-decoration: none;
+						color: $body;
+						@include rem( font-size, 17px );
+					}
+				}
+			}
 		}
 
-		.inline-svg {
-		  display:block;
-		  margin:0 auto;
-		}
+
     }
 }
