--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -31,3 +31,4 @@ Author: Tom Haycock-West
 @import 'sections/trades';
 @import 'sections/gallery';
 @import 'sections/testimonials';
+@import 'sections/footer';
