add extra copy line

--- a/assets/sass/sections/_trades.scss
+++ b/assets/sass/sections/_trades.scss
@@ -17,6 +17,10 @@
 			text-align: center;
 		}
 
+		p {
+			text-align: center;
+		}
+
 		.trades-container {
 			display: block;
 			@include cf();
